Fix up navigation
The nav got a little messed up from the changes to the `half` variant of Content.

We don't have time to implement a robust solution, so for right now we're just hacking something together so it displays a bit nicer.

--- a/src/jsx/components/Header.scss
+++ b/src/jsx/components/Header.scss
@@ -1,5 +1,15 @@
 @import "~inuitcss/settings/settings.core";
+@import "~bourbon-neat/core/neat";
+@import "src/css/settings/_grid.scss";
 
 .base {
   margin-bottom: $inuit-global-spacing-unit-large;
+}
+
+.name {
+  @include grid-column(2 of 5);
+}
+
+.nav {
+  @include grid-column(3 of 5);
 }
